Closed Bug 917026 Opened 10 years ago Closed 10 years ago

ASSERTION: TabChild::SetFocus not supported in TabChild: 'Not Reached' during several DOM mochitests on debug B2G

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: jgriffin, Assigned: smaug)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

When run on debug B2G emulators, the mochitest dom/tests/mochitest/bugs/test_bug664737.html fails with:

11:40:41     INFO -  7 ERROR TEST-UNEXPECTED-FAIL | /tests/dom/tests/mochitest/bugs/test_bug664737.html | Assertion count 1 is greater than expected range 0-0 assertions.

The assertion that occurs is:

11:40:41     INFO -  2 INFO TEST-START | /tests/dom/tests/mochitest/bugs/test_bug664737.html
11:40:41     INFO -  [Child 705] ###!!! ASSERTION: TabChild::SetFocus not supported in TabChild: 'Not Reached', file ../../../gecko/dom/ipc/TabChild.cpp, line 937

full log: https://tbpl.mozilla.org/php/getParsedLog.php?id=27933969&tree=Cedar&full=1#error0

This is the only error that's affecting debug B2G mochitest chunk 5.
This also affects dom/tests/mochitest/dom-level1-core/test_hc_textsplittextone.html in chunk 6.

full log: https://tbpl.mozilla.org/php/getParsedLog.php?id=27933848&tree=Cedar&full=1#error0
Also 2 tests in chunk 8:

/tests/dom/tests/mochitest/dom-level2-html/test_HTMLSelectElement11.html | Assertion count 1 is greater than expected range 0-0 assertions.
/tests/dom/tests/mochitest/general/test_focus_legend_noparent.html | Assertion count 1 is greater than expected range 0-0 assertions.

full log: https://tbpl.mozilla.org/php/getParsedLog.php?id=27933653&tree=Cedar&full=1#error0
Summary: ASSERTION: TabChild::SetFocus not supported in TabChild: 'Not Reached' during debug B2G dom/tests/mochitest/bugs/test_bug664737.html → ASSERTION: TabChild::SetFocus not supported in TabChild: 'Not Reached' during several DOM mochitests on debug B2G
See also bug 676840.
Is this something you could work on, dvander or felipe?  If not, any suggestions for a good owner?
Flags: needinfo?(felipc)
Flags: needinfo?(dvander)
I can't see the logs anymore, do you have a newer one that has the stack trace?

This wouldn't be an IPC or TabChild bug though, it's something in the application embedding, or focus or widget code. Stack trace would help see which.
Flags: needinfo?(dvander)
debug tests are temporarily completed busted due to bug 929139; when that's fixed, I'll link a new log.
Flags: needinfo?(jgriffin)
Olli, it's been said that you're knowledgeable in this area.
Assignee: nobody → bugs
Attached patch warningSplinter Review
NS_NOTREACHED is very wrong.
Just calling any window.focus()/.blur() in child process leads to the
assertion because nsGlobalWindow::Focus()/Blur() calls them via
embedding APIs.
We may want to implement SetFocus/Blur for e10s, but NS_NOTREACHED is just
wrong, and let's fix the assertion.

Making also nsGlobalWindow::Blur to not throw exception.
That blur() really shouldn't throw, and we actually set focus in the focus manager anyway.
Attachment #821870 - Flags: review?(felipc)
Flags: needinfo?(felipc)
Comment on attachment 821870 [details] [diff] [review]
warning

Review of attachment 821870 [details] [diff] [review]:
-----------------------------------------------------------------

Maybe even the NS_WARNING is not necessary, as there's already the NS_ERROR_NOT_IMPLEMENTED..
Attachment #821870 - Flags: review?(felipc) → review+
Well, that NS_ERROR_NOT_IMPLEMENTED isn't used at all...
https://hg.mozilla.org/mozilla-central/rev/572abeaaa0c0
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
Flags: needinfo?(jgriffin)
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.