Bug 917026, remove few bogus NS_NOTREACHEDs from TabChild and make window.blur() not throw, r=felipe